--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -42,28 +42,28 @@ under the License. -->
 
         <!-- BINARY -->
         <span> <strong>Binaries </strong>
-          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-1.11.0.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-1.11.0.tgz.sha256">SHA-256</a>,
-          <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-1.11.0.tgz.asc">PGP</a> ]
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-1.11.0.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-1.11.0.tgz.sha256">SHA-256</a>,
+          <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-1.11.0.tgz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
         <span> <strong>Source</strong>
-          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-1.11.0-src.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-1.11.0-src.tgz.sha256">SHA-256</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-1.11.0-src.tgz.asc">PGP</a>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-1.11.0-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-1.11.0-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-1.11.0-src.tgz.asc">PGP</a>
            ]
          </span><br/>
         <!-- NATIVE CLIENT SOURCE -->
         <span> <strong>Geode Native Source</strong>
-          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-native-1.11.0-src.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-native-1.11.0-src.tar.gz.sha512">SHA-512</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-native-1.11.0-src.tar.gz.asc">PGP</a>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-native-1.11.0-src.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-native-1.11.0-src.tar.gz.sha512">SHA-512</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-native-1.11.0-src.tar.gz.asc">PGP</a>
            ]
          </span><br/>
         <!-- Examples -->
         <span> <strong>Examples</strong>
-           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-examples-1.11.0.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-examples-1.11.0.zip.sha256">SHA-256</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-examples-1.11.0.zip.asc">PGP</a>
+           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-examples-1.11.0.zip">ZIP</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-examples-1.11.0.zip.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-examples-1.11.0.zip.asc">PGP</a>
             ] -
-           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-examples-1.11.0.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-examples-1.11.0.tar.gz.sha256">SHA-256</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.11.0/apache-geode-examples-1.11.0.tar.gz.asc">PGP</a>
+           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.11.0/apache-geode-examples-1.11.0.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-examples-1.11.0.tar.gz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.11.0/apache-geode-examples-1.11.0.tar.gz.asc">PGP</a>
            ]
          </span><br/>
 
@@ -96,28 +96,28 @@ dependencies {
 
         <!-- BINARY -->
         <span> <strong>Binaries </strong>
-          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-1.10.0.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-1.10.0.tgz.sha256">SHA-256</a>,
-          <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-1.10.0.tgz.asc">PGP</a> ]
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-1.10.0.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-1.10.0.tgz.sha256">SHA-256</a>,
+          <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-1.10.0.tgz.asc">PGP</a> ]
         </span><br/>
         <!-- SOURCE -->
         <span> <strong>Source</strong>
-          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-1.10.0-src.tgz">TGZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-1.10.0-src.tgz.sha256">SHA-256</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-1.10.0-src.tgz.asc">PGP</a>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-1.10.0-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-1.10.0-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-1.10.0-src.tgz.asc">PGP</a>
            ]
          </span><br/>
         <!-- NATIVE CLIENT SOURCE -->
         <span> <strong>Geode Native Source</strong>
-          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-native-1.10.0-src.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-native-1.10.0-src.tar.gz.sha512">SHA-512</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-native-1.10.0-src.tar.gz.asc">PGP</a>
+          [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-native-1.10.0-src.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-native-1.10.0-src.tar.gz.sha512">SHA-512</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-native-1.10.0-src.tar.gz.asc">PGP</a>
            ]
          </span><br/>
         <!-- Examples -->
         <span> <strong>Examples</strong>
-           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-examples-1.10.0.zip">ZIP</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-examples-1.10.0.zip.sha256">SHA-256</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-examples-1.10.0.zip.asc">PGP</a>
+           [ <a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-examples-1.10.0.zip">ZIP</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-examples-1.10.0.zip.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-examples-1.10.0.zip.asc">PGP</a>
             ] -
-           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-examples-1.10.0.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-examples-1.10.0.tar.gz.sha256">SHA-256</a>,
-           <a target="_blank" href="https://www.apache.org/dist/geode/1.10.0/apache-geode-examples-1.10.0.tar.gz.asc">PGP</a>
+           [<a target="_blank" href="http://apache.org/dyn/closer.cgi/geode/1.10.0/apache-geode-examples-1.10.0.tar.gz">TAR.GZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-examples-1.10.0.tar.gz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.10.0/apache-geode-examples-1.10.0.tar.gz.asc">PGP</a>
            ]
          </span><br/>
 
@@ -258,10 +258,10 @@ dependencies {
 					Project releases are approved by vote of the Apache Geode Project Management Committee (PMC). Support for a release is provided by project volunteers on the project <a href="http://geode.apache.org/community/#mailing-lists">mailing lists</a>. Bugs found in a release may be discussed on the list and reported through the <a href="https://issues.apache.org/jira/browse/GEODE">issue tracker</a>. The user mailing list and issue tracker are the only support options hosted by the Apache Geode project.
 				</p>
 				<p>
-					<strong>Note</strong>: When downloading from a mirror, please be sure to verify that checksums and signatures are correct. To do so, use the checksum and signature files from the main Apache site at <a href="https://www.apache.org/dist/geode/">https://www.apache.org/dist/geode/</a>. Find here the KEYS file, which contains all OpenPGP keys we use to sign releases here: <a href="https://www.apache.org/dist/geode/KEYS">KEYS</a>
+					<strong>Note</strong>: When downloading from a mirror, please be sure to verify that checksums and signatures are correct. To do so, use the checksum and signature files from the main Apache site at <a href="https://downloads.apache.org/geode/">https://downloads.apache.org/geode/</a>. Find here the KEYS file, which contains all OpenPGP keys we use to sign releases here: <a href="https://downloads.apache.org/geode/KEYS">KEYS</a>
 				</p>
 				<p>
-					The PGP signatures can be verified using PGP or GPG. First download the <a href="https://www.apache.org/dist/geode/KEYS">KEYS</a> as well as the <em>asc signature</em> file for the particular distribution. Then verify the signatures using:
+					The PGP signatures can be verified using PGP or GPG. First download the <a href="https://downloads.apache.org/geode/KEYS">KEYS</a> as well as the <em>asc signature</em> file for the particular distribution. Then verify the signatures using:
 				</p>
 				<p>
        				% pgpk -a KEYS
