Re-write tutorial callout module
Signed-off-by: Bryan Behrenshausen <bryan.behrenshausen@sas.com>

--- a/website/content/index.html
+++ b/website/content/index.html
@@ -135,10 +135,12 @@ under the License. -->
 
 <section class="bf-questions">
     <div class="container">
-            <div class="col-md-12 text-center cta">
-                And much more... Interested? You can check our <a href="https://cwiki.apache.org/confluence/display/GEODE/Index#Index-Geodein5minutesGeodein5minutes" target="_blank" class="btn btn-inverse btn-lg">Geode in 5 minutes tutorial</a> <span class="avoidwrap">, ask a question on the <a href="/community/" class="btn btn-inverse btn-lg">Mailing lists</a> or <a href="http://stackoverflow.com/search?q=Apache%20Geode" class="btn btn-inverse btn-lg">StackOverflow</a></span>
-            </div>
-    </div>
+		<div class="col-md-12 text-center cta">
+			<h2>Ready to get started?</h2>
+			<p>Follow the tutorial</p>
+			<p><a href="https://cwiki.apache.org/confluence/display/GEODE/Index#Index-Geodein5minutesGeodein5minutes" class="btn btn-inverse btn-lg" target="_blank">Geode in five minutes</a></p>
+		</div>
+	</div>
 </section>
 
 <section class="bf-news">
