Re-add link to community resources
Signed-off-by: Bryan Behrenshausen <bryan.behrenshausen@sas.com>

--- a/website/content/index.html
+++ b/website/content/index.html
@@ -139,6 +139,7 @@ under the License. -->
 			<h2>Ready to get started?</h2>
 			<p>Follow the tutorial</p>
 			<p><a href="https://cwiki.apache.org/confluence/display/GEODE/Index#Index-Geodein5minutesGeodein5minutes" class="btn btn-inverse btn-lg" target="_blank">Geode in five minutes</a></p>
+			<p>Or <a href="https://geode.apache.org/community/" title="Geode community resources">browse community resources</a>.</p>
 		</div>
 	</div>
 </section>
