--- a/website/content/releases/index.html
+++ b/website/content/releases/index.html
@@ -34,6 +34,63 @@ under the License. -->
       <!-- RELEASES -->
       <div class="container">
 
+        <!-- START OF 1.15.2-->
+        <h3>1.15.2</h3>
+        <!-- RELEASE NOTES -->
+        <strong><a target="_blank" href="https://cwiki.apache.org/confluence/display/GEODE/Release+Notes#ReleaseNotes-1.15.2">Release Notes</a></strong>
+        <p/>
+
+        <!-- BINARY -->
+        <span> <strong>Binaries </strong>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.15.2/apache-geode-1.15.2.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-1.15.2.tgz.sha256">SHA-256</a>,
+          <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-1.15.2.tgz.asc">PGP</a> ]
+        </span><br/>
+        <!-- SOURCE -->
+        <span> <strong>Source</strong>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.15.2/apache-geode-1.15.2-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-1.15.2-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-1.15.2-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- NATIVE CLIENT SOURCE -->
+        <span> <strong>Geode Native Source</strong>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.15.2/apache-geode-native-1.15.2-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-native-1.15.2-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-native-1.15.2-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- BENCHMARKS -->
+        <span> <strong>Benchmarks</strong>
+          [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.15.2/apache-geode-benchmarks-1.15.2-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-benchmarks-1.15.2-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-benchmarks-1.15.2-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+        <!-- Examples -->
+        <span> <strong>Examples</strong>
+           [<a target="_blank" href="https://apache.org/dyn/closer.cgi/geode/1.15.2/apache-geode-examples-1.15.2-src.tgz">TGZ</a>, <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-examples-1.15.2-src.tgz.sha256">SHA-256</a>,
+           <a target="_blank" href="https://downloads.apache.org/geode/1.15.2/apache-geode-examples-1.15.2-src.tgz.asc">PGP</a>
+           ]
+         </span><br/>
+
+        <!-- DEPENDENCY MANAGERS -->
+        <div class="container">
+          <strong>Gradle</strong>
+<pre class="prettyprint">
+dependencies {
+  compile 'org.apache.geode:geode-core:1.15.2'
+}
+</pre>
+          <strong>Maven</strong>
+<pre class="prettyprint">
+&lt;dependencies&gt;
+  &lt;dependency&gt;
+    &lt;groupId&gt;org.apache.geode&lt;/groupId&gt;
+    &lt;artifactId&gt;geode-core&lt;/artifactId&gt;
+    &lt;version&gt;1.15.2&lt;/version&gt;
+  &lt;/dependency&gt;
+&lt;/dependencies&gt;
+</pre>
+        </div>
+        <!-- END OF 1.15.2 -->
+
         <!-- START OF 1.15.1-->
         <h3>1.15.1</h3>
         <!-- RELEASE NOTES -->
